Fix Bugs